docs: editor-agnostic README + guides under docs/guide/
Restructure the public docs from one ~470-line README into an
editor-agnostic hub plus focused guides, so the README reads as "what
Lathe does" rather than "a Neovim tool" ahead of the public preview.

README (Neovim-free feature reference):
- Intro notes the javac Compiler Tree API (com.sun.source) as the source
  of semantics; Requirements state Java 21+ and Maven 3.x (Maven 4 not yet
  supported), with Surefire/JUnit scoped to test capture.
- Setup leads with a build-from-source note (publishing pending) and the
  capture-only first-run command that generates every launch template
  (incl. per-module test-launch.json) without running the suite.
- Features are editor-agnostic capability tables (code intelligence,
  diagnostics/formatting, run/test/debug) with a corresponding LSP-method
  column; formatting documented as opt-in.
- An Editors section is the only route to a client; How it works, Opt-out,
  Partial builds, Documentation, Troubleshooting, Feedback, and License.

docs/guide/ (editor-agnostic concept docs):
- installation.md — Maven extension and verified manual POM configuration,
  with a "which to use" comparison and the Initialize table.
- run-configuration.md — the overlay schema.
- test-capture.md — capture internals, capture-only mode, and limits.

docs/guide/editors/neovim.md — the Neovim cheatsheet: install plus keymap
tables (command/API, default, suggested) for every session, the output
surface, formatting/indentation profiles, and logging.

AGENTS.md gains a documentation map routing code tools between guides,
design docs, status, and gaps. The restructure design doc records the
editor-agnostic course correction in a new section.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>